force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>1. Integration relevant (Grace)
2. ZR
3. SF-646</description>
    <label>Projekt</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projekte</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>