force-app/main/default/objects/Project__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>1. Integration relevant (Grace)
2. ZRD.
3.</description>
    <label>Overall Project Active</label>
    <type>Checkbox</type>
</CustomField>