force-app/main/default/objects/Project__c/fields/Announcement_ID__c.field-meta.xml
<CustomField>
    <fullName>Announcement_ID__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZRD
3.</description>
    <label>Announcement ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>