force-app/main/default/objects/Project__c/fields/Announcer__c.field-meta.xml
<CustomField>
    <fullName>Announcer__c</fullName>
    <description>1. Integration relevant (BIS, infoBau)
2. ZRD
3. SF-647</description>
    <label>Announcer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>