force-app/main/default/objects/Project__c/fields/Automation_Time__c.field-meta.xml
<CustomField>
    <fullName>Automation_Time__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper Field to Bypass Validation Rules if the record was updated via Flow</description>
    <label>Automation Time</label>
    <type>DateTime</type>
</CustomField>