force-app/main/default/objects/Project__c/fields/Building_Owner__c.field-meta.xml
<CustomField>
    <fullName>Building_Owner__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. SF-1205 Filled by Flow &quot;Create Project screen Flow&quot;</description>
    <label>Building Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>