force-app/main/default/objects/Project__c/fields/Building_Owner_cleaned__c.field-meta.xml
<CustomField>
    <fullName>Building_Owner_cleaned__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. SF-1205 Helper field to store cleaned building owner names</description>
    <label>Building Owner (cleaned)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>