force-app/main/default/objects/Project__c/fields/Bypass_StartbeforeEnd_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_StartbeforeEnd_Validation__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZRD
3. Helper Field to bypass Validation Start before Date if start date was filled with placeholder</description>
    <formula>Project_Construction_Start__c  ==  DATEVALUE($Setup.BIS_Project_Import_Config__c.Project_Construction_Start_Placeholder__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bypass Start Before End Validation</label>
    <type>Checkbox</type>
</CustomField>