force-app/main/default/objects/Project__c/fields/Bypass_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rule__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper Field to bypass Validation Rules if the Update was done via Flow</description>
    <formula>(NOW() - (2/14400) &lt;=  Automation_Time__c ) = TRUE
||
(NOW() - (2/14400) &gt; Automation_Time__c ) = FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bypass Validation Rule</label>
    <type>Checkbox</type>
</CustomField>