force-app/main/default/objects/Project__c/fields/Collected_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Collected_Team_Members__c</fullName>
    <description>1. Not Integration relevant
2. ZR
3. Used as a Helper Field to filter in List View. Filled by Flows &quot;Project After Insert&quot; and &quot;Project Update before Delete&quot;</description>
    <label>Collected Team Members</label>
    <length>255</length>
    <type>Text</type>
</CustomField>