force-app/main/default/objects/Project__c/fields/Core_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Core_Source_System__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZR
3.</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_System</valueSetName>
    </valueSet>
</CustomField>