force-app/main/default/objects/Project__c/fields/Current_User_Creation_User_Filter__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Creation_User_Filter__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-674 - Help field to identify projects that the current user has created and therefore used within list views</description>
    <formula>IF(  CreatedById  = $User.Id ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Creation User Filter</label>
    <type>Checkbox</type>
</CustomField>