force-app/main/default/objects/Project__c/fields/Date_of_Change_Project_Progress__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Change_Project_Progress__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. Helper field to report on changes made to the Project Progress</description>
    <label>Date of Change Project Progress</label>
    <type>Date</type>
</CustomField>