force-app/main/default/objects/Project__c/fields/Date_of_Change_Project_Start__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Change_Project_Start__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper Field to report on changes made to the Project Start</description>
    <label>Date of Change Project Start</label>
    <type>Date</type>
</CustomField>