force-app/main/default/objects/Project__c/fields/Exact_Source__c.field-meta.xml
<CustomField>
    <fullName>Exact_Source__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZR
3.</description>
    <label>Exact Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Exact_Source</valueSetName>
    </valueSet>
</CustomField>