force-app/main/default/objects/Project__c/fields/Grace_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Grace_Project_ID__c</fullName>
    <description>1. Integration relevant
2. ZRD
3.</description>
    <label>Grace Project ID</label>
    <type>TextArea</type>
</CustomField>