force-app/main/default/objects/Project__c/fields/House_Number_cleaned__c.field-meta.xml
<CustomField>
    <fullName>House_Number_cleaned__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. SF-1205 Helper field to store cleaned House Number data</description>
    <label>House Number (cleaned)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>