force-app/main/default/objects/Project__c/fields/iBau_ID__c.field-meta.xml
<CustomField>
    <fullName>iBau_ID__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZRD
3. SF-647. Stores the second available ibau-ID for later purposes.</description>
    <label>iBau ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>