force-app/main/default/objects/Project__c/fields/Internal_Project_Construction_Progress__c.field-meta.xml
<CustomField>
    <fullName>Internal_Project_Construction_Progress__c</fullName>
    <description>1. Not integration relevant 
2. ZRD
3. SF-1261</description>
    <label>Internal Project-/ Construction Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discussion</fullName>
            </value>
            <value>
                <fullName>Pre Planning</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Shortly before Start</fullName>
            </value>
            <value>
                <fullName>Demolition</fullName>
            </value>
            <value>
                <fullName>Underground Construction</fullName>
            </value>
            <value>
                <fullName>Building Shell</fullName>
            </value>
            <value>
                <fullName>Build-Up</fullName>
            </value>
            <value>
                <fullName>Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>