force-app/main/default/objects/Project__c/fields/Involved_Accounts_cleaned__c.field-meta.xml
<CustomField>
    <fullName>Involved_Accounts_cleaned__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. SF-1205 helper field to store cleaned involved Accounts names</description>
    <label>Involved Accounts (cleaned)</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>