force-app/main/default/objects/Project__c/fields/Last_Modified_By_System__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_System__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-913. Used for filtering admin reports.</description>
    <formula>IF( CONTAINS(LastModifiedBy.Username, &quot;bis@force.com&quot;)&amp;&amp;  ISPICKVAL(Exact_Source__c, &quot;iBau&quot;) , &quot;ibau&quot;,
IF( CONTAINS(LastModifiedBy.Username, &quot;bis@force.com&quot;)&amp;&amp;  ISPICKVAL(Exact_Source__c, &quot;infoBau&quot;) , &quot;infobau&quot;,
IF(  LastModifiedBy.Alias = &quot;iuser&quot;, &quot;GRACE&quot;, &quot;Salesforce&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified By System</label>
    <type>Text</type>
</CustomField>