force-app/main/default/objects/Project__c/fields/Main_Project__c.field-meta.xml
<CustomField>
    <fullName>Main_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integration relevant (Grace)
2. ZRD
3.</description>
    <label>Main Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project__c.Main_Project__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Subprojects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>