force-app/main/default/objects/Project__c/fields/Manual_Internal_Progress_Change__c.field-meta.xml
<CustomField>
    <fullName>Manual_Internal_Progress_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Not integration relevant
2. ZRD
3. SF-1261</description>
    <label>Manual Internal Progress Change</label>
    <type>Checkbox</type>
</CustomField>