force-app/main/default/objects/Project__c/fields/Name_cleaned__c.field-meta.xml
<CustomField>
    <fullName>Name_cleaned__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. SF-1205 Helper fields used to store cleaned Projectname data</description>
    <label>Name (cleaned)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>