force-app/main/default/objects/Project__c/fields/New_Project__c.field-meta.xml
<CustomField>
    <fullName>New_Project__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper Field to report on new Projects</description>
    <formula>IF(ROUND(NOW()- CreatedDate,0) &lt;= 7,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Project</label>
    <type>Checkbox</type>
</CustomField>