force-app/main/default/objects/Project__c/fields/Other_Sources__c.field-meta.xml
<CustomField>
    <fullName>Other_Sources__c</fullName>
    <description>1. Integration relevant
2. ZRD
3.</description>
    <label>Other Sources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>