force-app/main/default/objects/Project__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper Field to display the Owner Full Name in List Views.</description>
    <formula>IF( NOT(Owner:Queue.QueueName = &quot;Sales Excellence&quot;), 
HYPERLINK(&apos;/&apos; + OwnerId ,   Owner:User.FirstName  + &quot; &quot; +   Owner:User.LastName),
&quot;Sales Excellence&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>