force-app/main/default/objects/Project__c/fields/Part_of_Project_Team__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Project_Team__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. Help field used to filter Projects where the current user is part of the project team for list views and reports.</description>
    <formula>IF( CONTAINS( Collected_Team_Members__c ,   $User.AD_Login_Name__c  ), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part of Project Team?</label>
    <type>Checkbox</type>
</CustomField>