force-app/main/default/objects/Project__c/fields/Postal_Code_Changed__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Not integration relevant
2. ZRD
3. SF-1202</description>
    <label>Postal Code Changed?</label>
    <type>Checkbox</type>
</CustomField>