force-app/main/default/objects/Project__c/fields/Potential__c.field-meta.xml
<CustomField>
    <fullName>Potential__c</fullName>
    <description>1. Integration relevant
2. ZRD
3.</description>
    <label>Potential</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Potential</valueSetName>
    </valueSet>
</CustomField>