force-app/main/default/objects/Project__c/fields/Project_Address__c.field-meta.xml
<CustomField>
    <fullName>Project_Address__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZRD
3. SF-742</description>
    <label>Project Address</label>
    <type>Address</type>
</CustomField>