force-app/main/default/objects/Project__c/fields/Project_Construction_Progress__c.field-meta.xml
<CustomField>
    <fullName>Project_Construction_Progress__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZR
3.</description>
    <label>Project-/ Construction Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Discussion</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Pre Planning</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Planning</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Shortly before Start</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Implementation</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Shortly before Completion / Completion</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>6</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>