force-app/main/default/objects/Project__c/fields/Project_Construction_Start__c.field-meta.xml
<CustomField>
    <fullName>Project_Construction_Start__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZRD
3.</description>
    <label>Project-/ Construction Start</label>
    <type>Date</type>
</CustomField>