force-app/main/default/objects/Project__c/fields/Project_ID_BIS__c.field-meta.xml
<CustomField>
    <fullName>Project_ID_BIS__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZRD
3.</description>
    <label>Project ID (BIS)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>