force-app/main/default/objects/Project__c/fields/Project_Progress_New_Change__c.field-meta.xml
<CustomField>
    <fullName>Project_Progress_New_Change__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. Helper Field to report on changes to the project progress. This field indicates, whether the project progress has been changed in the last 7 days.</description>
    <formula>IF((TODAY()- Date_of_Change_Project_Progress__c) &lt;= 7, TRUE, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Progress New Change</label>
    <type>Checkbox</type>
</CustomField>