force-app/main/default/objects/Project__c/fields/Project_Source__c.field-meta.xml
<CustomField>
    <fullName>Project_Source__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZR
3.</description>
    <label>Project Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source</valueSetName>
    </valueSet>
</CustomField>