force-app/main/default/objects/Project__c/fields/Project_Start_New_Change__c.field-meta.xml
<CustomField>
    <fullName>Project_Start_New_Change__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. Helper Field to report on changes to the project start. This field indicates, whether a project start has been changed within the last 7 days.</description>
    <formula>IF((TODAY()- Date_of_Change_Project_Start__c) &lt;= 7, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Start New Change</label>
    <type>Checkbox</type>
</CustomField>