force-app/main/default/objects/Project__c/fields/Project_URL__c.field-meta.xml
<CustomField>
    <fullName>Project_URL__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZRD
3. SF-475</description>
    <label>Project URL</label>
    <type>Url</type>
</CustomField>