force-app/main/default/objects/Project__c/fields/Project_Volume_for_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Project_Volume_for_Duplicate_Check__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Set via Flow &quot;Project Before Insert Flow&quot; or &quot;Project Before Update Flow&quot;. Used to be able to do a fuzzy duplicate check on the Project Record Name.</description>
    <label>Project Volume for Duplicate Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>