force-app/main/default/objects/Project__c/fields/Sales_Excellence_is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Excellence_is_Owner__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. SF-587 Helper Field to display &quot;Assign new Owner&quot; Quick Action only if the Sales Excellence Queue is the Owner of the project</description>
    <formula>Owner:Queue.QueueName = &quot;Sales Excellence&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Excellence is Owner</label>
    <type>Checkbox</type>
</CustomField>