force-app/main/default/objects/Project__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper Field to be able to search through the Address Fields. Filled by Flow &quot;ZR_Project_Before_Insert_Flow&quot; and &quot;ZR_Project_Before_Update_Flow&quot;</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>