force-app/main/default/objects/Project__c/fields/Street_cleaned__c.field-meta.xml
<CustomField>
    <fullName>Street_cleaned__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. SF-1205 Helper field to store cleaned Street data</description>
    <label>Street (cleaned)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>