force-app/main/default/objects/Project__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZRD
3.</description>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>