force-app/main/default/objects/Project__c/fields/Subproject_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Subproject_Opportunities__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1232</description>
    <formula>HYPERLINK(&quot;/lightning/r/Report/&quot; &amp;  $Setup.Report_IDs__c.Subproject_Opportunities__c &amp; &quot;/view?queryScope=userFolders&quot; &amp; &quot;&amp;fv0=&quot; &amp;  Id , IF( ISPICKVAL($User.LanguageLocaleKey, &quot;de&quot;), &quot;Öffnen&quot;, &quot;Open&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subproject Opportunities</label>
    <type>Text</type>
</CustomField>