force-app/main/default/objects/Project__c/fields/Territories_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Territories_Level_3__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-622. Used to store alle related Territories on Level 3 directly on Project, so that user can filter list views with territories contains XY.</description>
    <label>Territories Level 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>