force-app/main/default/objects/Project__c/fields/Territory_Ids_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Territory_Ids_Level_3__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. SF-1095</description>
    <label>Territory Ids Level 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>