force-app/main/default/objects/Project__c/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZR
3.</description>
    <label>Total Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>