force-app/main/default/objects/Project__c/recordTypes/BIS_Project.recordType-meta.xml
<RecordType>
    <fullName>BIS_Project</fullName>
    <active>true</active>
    <description>Used for Projects created from BIS systems.</description>
    <label>BIS Project</label>
</RecordType>