force-app/main/default/objects/Project__c/recordTypes/Salesforce_Project.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Project</fullName>
    <active>true</active>
    <description>Used to create Projects directly in Salesforce.</description>
    <label>Salesforce Project</label>
</RecordType>