force-app/main/default/objects/Project__c/validationRules/ZR_External_ID_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_External_ID_Format</fullName>
    <active>true</active>
    <description>Makes sure that the external ID entered has prefix &apos;ibau&apos; or &apos;Infobau&apos;.</description>
    <errorConditionFormula>NOT(ISBLANK(External_ID__c)) &amp;&amp; NOT(OR(BEGINS(External_ID__c, &quot;ibau_&quot;),BEGINS(External_ID__c, &quot;infobau_&quot;)))</errorConditionFormula>
    <errorDisplayField>External_ID__c</errorDisplayField>
    <errorMessage>The external ID has to start with &apos;ibau_&apos; or &apos;infobau_&apos;.</errorMessage>
</ValidationRule>