force-app/main/default/objects/Project__c/validationRules/ZR_Potential_required.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_Potential_required</fullName>
    <active>true</active>
    <description>SF-1267 Ensures, that the Potential is always filled, except for inactive project and for projects being created or updated by the Integration User</description>
    <errorConditionFormula>ISBLANK( Potential__c )
&amp;&amp;
Active__c = TRUE
&amp;&amp; 
$Permission.Core_Project_Bypass_Validation_Rules = FALSE
&amp;&amp;
NOT(CONTAINS( $Profile.Name , &quot;System&quot;))
&amp;&amp;
Bypass_Validation_Rule__c = FALSE</errorConditionFormula>
    <errorDisplayField>Potential__c</errorDisplayField>
    <errorMessage>Please fill the Potential for this Project.</errorMessage>
</ValidationRule>