force-app/main/default/objects/Project__c/validationRules/ZR_Start_before_End_Date_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_Start_before_End_Date_Project</fullName>
    <active>true</active>
    <description>SF-772 This validation rule ensures, that the Start Date of a Project is before the End Date of a Project.</description>
    <errorConditionFormula>(Project_Construction_Start__c &gt;  Project_Construction_End__c) &amp;&amp; NOT(ISBLANK( Project_Construction_End__c))
&amp;&amp;  $Permission.Core_Project_Bypass_Validation_Rules = False
&amp;&amp;  Bypass_StartbeforeEnd_Validation__c  = FALSE</errorConditionFormula>
    <errorDisplayField>Project_Construction_Start__c</errorDisplayField>
    <errorMessage>The Start Date of a Project must be earlier than the End Date of a Project!</errorMessage>
</ValidationRule>