force-app/main/default/objects/Project__c/validationRules/ZR_ZipCode_Validation_999999_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_999999_Project</fullName>
    <active>true</active>
    <description>SF-646 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{6}&quot;). Example: 999999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK( Project_Address__PostalCode__s )),
OR(
ISPICKVAL( Project_Address__CountryCode__s ,&quot;BY&quot;),
ISPICKVAL(Project_Address__CountryCode__s,&quot;CN&quot;),
ISPICKVAL(Project_Address__CountryCode__s,&quot;EC&quot;),
ISPICKVAL(Project_Address__CountryCode__s,&quot;IN&quot;),
ISPICKVAL(Project_Address__CountryCode__s,&quot;KZ&quot;),
ISPICKVAL(Project_Address__CountryCode__s,&quot;KG&quot;),
ISPICKVAL(Project_Address__CountryCode__s,&quot;RO&quot;),
ISPICKVAL(Project_Address__CountryCode__s,&quot;RU&quot;),
ISPICKVAL(Project_Address__CountryCode__s,&quot;SG&quot;),
ISPICKVAL(Project_Address__CountryCode__s,&quot;TJ&quot;),
ISPICKVAL(Project_Address__CountryCode__s,&quot;UZ&quot;)
)),
NOT(REGEX(Project_Address__PostalCode__s, (&quot;\\d{6}&quot;))),
FALSE)
&amp;&amp; $Permission.Core_Project_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>Project_Address__PostalCode__s</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of six numbers. Example: 999999</errorMessage>
</ValidationRule>